# MAX-BLE-HCI

./: .buildinfo  .gitignore  LICENSE  README.md  ble_hci.html  ble_standard.html  constants.html  controller_cmds.html  data_params.html  examples.html  genindex.html  hci_packets.html  hci_reference.html  index.html  informational_cmds.html  install.bat  install.sh  installation.html  le_controller_cmds.html  link_control_cmds.html  modules.html  objects.inv  overview.html  packet_codes.html  packet_defs.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  status_cmds.html  utils.html  vendor_spec.html  vendor_spec_cmds.html
.doctrees/: ble_hci.doctree  ble_standard.doctree  constants.doctree  controller_cmds.doctree  data_params.doctree  examples.doctree  hci_packets.doctree  hci_reference.doctree  index.doctree  informational_cmds.doctree  installation.doctree  le_controller_cmds.doctree  link_control_cmds.doctree  modules.doctree  overview.doctree  packet_codes.doctree  packet_defs.doctree  status_cmds.doctree  utils.doctree  vendor_spec.doctree  vendor_spec_cmds.doctree
.github/workflows/: black-format-check.yml  black-format-run.yml  documentation.yml  integration.yml  pylint.yml  pypi-deploy.yml  requirements.txt  test-installer.yml  test_installer.yml  versioning.yml
_modules/: index.html
_modules/max_ble_hci/: ble_hci.html  ble_standard_cmds.html  constants.html  data_params.html  hci_packets.html  packet_codes.html  packet_defs.html  utils.html  vendor_spec_cmds.html
_sources/: ble_hci.rst.txt  data_params.rst.txt  hci_reference.rst.txt  index.rst.txt  installation.rst.txt  le_controller_cmds.rst.txt  modules.rst.txt  vendor_spec.rst.txt
_static/: hello_hci.py
debug/: init
docs/source/: ble_hci.rst  ble_standard.rst  conf.py  constants.rst  controller_cmds.rst  hci_reference.rst  index.rst  informational_cmds.rst  installation.rst  le_controller_cmds.rst  modules.rst  overview.rst  packet_codes.rst  packet_defs.rst  utils.rst  vendor_spec_cmds.rst
doctrees/: ble_hci.doctree  controller_cmds.doctree  examples.doctree  hci_reference.doctree  index.doctree  informational_cmds.doctree  installation.doctree  le_controller_cmds.doctree  link_control_cmds.doctree  modules.doctree  overview.doctree  vendor_spec_cmds.doctree
examples/: connection.py  dtm.py  hci_cfg.ini  hello_hci.py  test_hds_em.py
examples/firmware_update/: README.md  firmware_update.py
html/: controller_cmds.html  examples.html  genindex.html  hci_reference.html  index.html  link_control_cmds.html  modules.html  overview.html  py-modindex.html  search.html  vendor_spec_cmds.html
html/_modules/: index.html
html/_sources/: controller_cmds.rst.txt  (+3 more)
src/: .pylintrc  cmd1  cmd2  config.ini  config.json  debugging.py  enc_test.py  hci_decode.py  hci_decode_tools_cli.py  hci_test.py  max32655.elf  max_ble_hci_cli.py  pylintrc  test.py
tests/: enc_test.py  test.py
(+61 files in other folders)
