[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/ble_hci"]

[project]
name = "max_ble_hci"
version = "0.0.0"
dependencies = [
    "pyserial"
]
requires-python = ">=3.8"

description = "BLE HCI Test interface for controllers capable of the UART transport"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["serial", "ble-hci", "hci",]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.urls]
Homepage = "https://github.com/Analog-Devices-MSDK/BLE-HCI"
Repository = "https://github.com/Analog-Devices-MSDK/BLE-HCI"
"Bug Tracker" = "https://github.com/Analog-Devices-MSDK/BLE-HCI/issues"


