[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "max_ble_hci"
version = "1.3.5"
dependencies = [ "pyserial", "pyaes", "alive-progress", "pyreadline3 ; platform_system == 'Windows'", "gnureadline ; platform_system == 'Darwin'", "colorlog",]
requires-python = ">=3.8"
description = "BLE HCI Test interface for controllers capable of the UART transport"
readme = "README.md"
keywords = [ "serial", "ble-hci", "hci",]
classifiers = [ "Development Status :: 4 - Beta", "Programming Language :: Python",]

[project.license]
file = "LICENSE"

[project.scripts]
max_ble_hci = "max_ble_hci_cli:main"
hcidecode = "hci_decode:main"

[project.urls]
Homepage = "https://github.com/Analog-Devices-MSDK/BLE-HCI"
Repository = "https://github.com/Analog-Devices-MSDK/BLE-HCI"
Documentation = "https://analog-devices-msdk.github.io/MAX-BLE-HCI/"
"Bug Tracker" = "https://github.com/Analog-Devices-MSDK/BLE-HCI/issues"

[tool.hatch.build.targets.wheel]
packages = [ "src/max_ble_hci", "src/max_ble_hci_cli.py", "src/hci_decode.py",]
